--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -136,8 +136,15 @@ ul li a:hover::after{
     align-items: center;
     padding: 0.5rem;
     margin-top: 5rem;
+    transition: all 500ms ease-in-out;
     
 }
+
+.colunaesq button:hover{
+    background-color: blueviolet;
+    transform: scale(1.1);
+}
+
 
 .colunaesq button, .colunaesq label img{
     border-radius: 50%;
