--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,7 +25,7 @@ body{
 }
 
 aside{
-    background-image: url('../img/lovehot.jpg');
+    background-image: url('/assets/img/lovehot.jpg');
     background-size: cover;
     background-position: center;
     position: fixed;
@@ -180,20 +180,13 @@ legend{
     margin-top: 1rem;
 }
 
-#jogar .jogo{
-    
-    display: flex;
-    flex-flow: column wrap;
-    background-image: url("");
-    background-position: center;
-    background-size: 100%;
-    background-repeat:no-repeat;
-    
-     
-    margin: 0 auto;
+.jogo button{
+    border-radius: 3rem;
     padding: 1rem;
-    gap: 8rem;
-    
+    border: solid 0;
+}
+.jogo button:hover{
+    background-color: blueviolet;
 }
 
 .colunadir{
@@ -267,11 +260,13 @@ h2{
     display: flex;
     flex-direction: column;
     justify-content: center;
-    align-items: center;
+    align-items:center;
+    margin-left: -10rem;
     
 }
 
 .play p{
+    font-weight: 600;
     margin-top: 3rem;
     font-size: 2rem;
     align-items: initial;
@@ -290,6 +285,7 @@ h2{
 .play ol li{
     font-size: 2rem;
     color: rgb(41, 11, 58);
+    font-weight: 600;
     justify-content: center;
     align-items: center;
     text-shadow: 2px;
@@ -298,6 +294,7 @@ h2{
 
 .play ol li a{
     text-decoration: none;
+    font-weight: 600;
     color: rgb(41, 11, 58);
     cursor: pointer;
 }
@@ -341,9 +338,11 @@ h2{
 }
 
 .img2{
-    background-image: url("/img/clave9.jpg");
-    background-position: center center;
-    background-size: contain;  
+    background-image: url("/assets/img/clave3.png");
+    background-color: whitesmoke;
+    background-position:right;
+    background-size: 30%;  
+    background-repeat: no-repeat;
 }
 
 .versus{
