--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -83,6 +83,23 @@ ul li a:hover::after{
     
 }
 
+.menuplay{
+    display: flex;
+    position: fixed;
+    color: whitesmoke;
+    background-color: purple;
+    border-radius: 50%;
+    padding: 1.5rem;
+    bottom: 2.5rem;
+    right: 2.5rem;
+    border: solid 0.3rem whitesmoke;
+    transition: all 500ms ease-in-out;
+}
+
+.menuplay:hover{
+    background-color: blueviolet;
+}
+
 .conteudo{
     display: flex;
     justify-content: center;
@@ -140,6 +157,11 @@ ul li a:hover::after{
     
 }
 
+.colunaesq button{
+    border: 0.2rem solid blueviolet;
+    transition: all 500ms ease-in-out;
+}
+
 .colunaesq button:hover{
     background-color: blueviolet;
     transform: scale(1.1);
@@ -149,12 +171,17 @@ ul li a:hover::after{
 .colunaesq button, .colunaesq label img{
     border-radius: 50%;
     background-color: rgb(41, 11, 58);
-    border: 0 transparent rgb(41, 11, 58);
+    
 }
 
 
 .colunaesq img{
     margin: 0 auto;
+    transition: all 500ms ease-in-out;
+}
+
+.colunaesq img:hover{
+    transform: scale(1.1);
 }
 
 #home img{
