--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,10 @@ body{
     height: auto;   
 }
 
+.intro h1{
+    transition:all 500ms ease-in-out;
+}
+
 aside{
     background-image: url('/assets/img/lovehot.jpg');
     background-size: cover;
@@ -53,35 +57,34 @@ ul li a{
     display: block;    
     text-decoration-line: none;
     color:rgb(41, 11, 58);
-    padding: 1rem; 
-    position: relative;
-   
+    padding: 0.2rem 1rem; 
+    position: relative;  
+    transition: all 300ms ease-in-out;
+}
+
+ul li a:hover{
+    color: whitesmoke;
 }
 
 ul li a::after{
     content: "";
-    background-color: red;
+    background-color: whitesmoke;
     transition: all 300ms ease-in-out;
     position: absolute;
-    height: 0%;
+    height: 0;
     width: 0%;
     left: 50%;
-    bottom: 0%;
-    border-bottom: 0.2rem;
-}
+    bottom: 0;
+    }
 
 ul li a:hover::after{
-    background-color: red;
-    height: 1rem;
-    bottom: 0%;
+    background-color: whitesmoke;
+    height: 0.2rem;
+    bottom: 0;
     content: "";
     width: 100%;
-    height: 0.1rem;
     left: 0%;
-    border-bottom: 0.1rem;
-   
-    
-}
+   }
 
 .menuplay{
     display: flex;
@@ -93,12 +96,30 @@ ul li a:hover::after{
     bottom: 2.5rem;
     right: 2.5rem;
     border: solid 0.3rem whitesmoke;
-    transition: all 500ms ease-in-out;
 }
 
 .menuplay:hover{
-    background-color: blueviolet;
+    transition: all 800ms ease-in-out;
+    animation: pulse 2.5s ease 0s infinite;
+    background-color: purple;
 }
+
+@keyframes pulse {
+    0% {
+        opacity: 1;
+        transform: scale(1);
+    }
+    
+    50% {
+        opacity: 1;
+        transform: scale(1.05);
+    }
+
+    100%{
+        opacity: 1;
+        transform: scale(1);
+    }
+  }
 
 .conteudo{
     display: flex;
@@ -153,8 +174,11 @@ ul li a:hover::after{
     align-items: center;
     padding: 0.5rem;
     margin-top: 5rem;
-    transition: all 500ms ease-in-out;
-    
+    transition: all 500ms ease-in-out;  
+}
+
+.colunaesq p{
+    color: wheat;
 }
 
 .colunaesq button{
@@ -184,6 +208,19 @@ ul li a:hover::after{
     transform: scale(1.1);
 }
 
+.colunaesq .perguntas{
+    transition: all 2000ms ease-in-out;
+}
+
+.colunaesq .perguntas:hover{
+    
+    transform: scale(1.1) rotate(1080deg);
+}
+
+.crono{
+    display: flex;
+}
+
 #home img{
     width: 150px;
     height: 150px; 
@@ -208,9 +245,12 @@ legend{
 }
 
 .jogo button{
-    border-radius: 3rem;
+    color: whitesmoke;
+    border-radius: 2rem;
+    background-color: deeppink;
     padding: 1rem;
-    border: solid 0;
+    border: solid 0.2rem whitesmoke;
+    transition: all 500ms ease-in-out;
 }
 .jogo button:hover{
     background-color: blueviolet;
@@ -222,8 +262,11 @@ legend{
     grid-template-rows: 1fr 1fr 1fr;
     text-align:center;
     align-items: center;
-    justify-content: center;
-   
+    justify-content: center; 
+}
+
+.colunadir h4{
+    color: yellow;
 }
 
 .colunadir .jogo{
@@ -331,7 +374,6 @@ h2{
     background-color: rgb(187, 51, 51);
     width: 10rem;
     height: 10rem;
-    
     padding: 2rem;
 }
 
@@ -345,8 +387,7 @@ h2{
     justify-content: center;
     align-items: center;
     margin-left: 0;
-    margin-right: 50px;
-    
+    margin-right: 50px; 
     margin-bottom: 50px;
 
 }
@@ -391,6 +432,16 @@ h2{
 .verdade img{
     width: 1rem;
     height: 1rem;
+}
+
+.armariom{
+    display: flex;
+    text-align: start;
+}
+
+.armarioh{
+    display: flex;
+    text-align: start;
 }
 
 footer{
