--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -41,7 +41,7 @@ aside{
     font-size: 2rem;
 }
 
-.sec{
+.sec:not(.conteudo, .conteudor){
     min-height: 100vh;
     background-color: rgb(41, 11, 58);
 }
@@ -86,22 +86,34 @@ ul li a:hover::after{
     left: 0%;
    }
 
-.menuplay{
-    display: flex;
+#barra{
     position: fixed;
-    color: whitesmoke;
-    background-color: purple;
-    border-radius: 50%;
-    padding: 1.5rem;
     bottom: 2.5rem;
+    left: 5rem;
+    width: 20rem;
+    color: blueviolet;
+    border-radius: 3rem;
+    background-color: blueviolet;
+   }
+   
+
+  
+
+.menuplay{
+    position: fixed;
+    width: 6rem;
+    border-radius: 50%;
+    height: 6rem;
+    bottom: 2rem;
     right: 2.5rem;
-    border: solid 0.3rem whitesmoke;
 }
+
+
 
 .menuplay:hover{
     transition: all 800ms ease-in-out;
     animation: pulse 2.5s ease 0s infinite;
-    background-color: purple;
+
 }
 
 @keyframes pulse {
@@ -122,11 +134,19 @@ ul li a:hover::after{
   }
 
 .conteudo{
+    min-height: 100vh;
     display: flex;
     justify-content: center;
     align-items: center;
     margin: 0 auto;
     padding: 10rem;
+    background-image: url("/assets/img/fundohome.jpg");
+    background-size: contain;
+    background-position: center;
+}
+
+section .conteudor{
+    background-color: whitesmoke;
 }
 
 .conteudo p{
@@ -142,6 +162,10 @@ ul li a:hover::after{
     margin: 0 auto;
     padding: 1rem 4rem;
     z-index: 10;
+    background-image: url("/assets/img/fire21.gif");
+    background-size: cover;
+    background-position: center center;
+    background-repeat: no-repeat;
 }
 
 
@@ -221,11 +245,12 @@ ul li a:hover::after{
     display: flex;
 }
 
-#home img{
+#home .home img{
     width: 150px;
     height: 150px; 
     padding: 3rem;
 }
+
 
 .home .b{
     display: flex;
