--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -29,20 +29,29 @@ body{
 }
 
 aside{
-    background-image: url('/assets/img/lovehot.jpg');
-    background-size: cover;
+    background-color: rgb(121, 23, 121);
+    background-image: url("/assets/img/barra1.jpg");
+    background-size: contain;
+    background-size: 100vw;
     background-position: center;
     position: fixed;
     top: 0%;
     left: 0%;
     right: 0%; 
-    border-bottom: 0.2rem solid rgb(131, 131, 136);
+    border-bottom: 0rem solid rgb(131, 131, 136);
     color: rgb(41, 11, 58);
     font-size: 2rem;
 }
 
-.sec:not(.conteudo, .conteudor){
+aside h1{
+    color: whitesmoke;
+}
+
+.sec{
     min-height: 100vh;
+}
+
+.sec:not(.conteudo, .conteudor){
     background-color: rgb(41, 11, 58);
 }
 
@@ -56,15 +65,12 @@ ul{
 ul li a{
     display: block;    
     text-decoration-line: none;
-    color:rgb(41, 11, 58);
+    color: whitesmoke;
     padding: 0.2rem 1rem; 
     position: relative;  
     transition: all 300ms ease-in-out;
 }
 
-ul li a:hover{
-    color: whitesmoke;
-}
 
 ul li a::after{
     content: "";
@@ -101,9 +107,9 @@ ul li a:hover::after{
 
 .menuplay{
     position: fixed;
-    width: 6rem;
+    width: 5rem;
     border-radius: 50%;
-    height: 6rem;
+    height: 5rem;
     bottom: 2rem;
     right: 2.5rem;
 }
@@ -141,12 +147,16 @@ ul li a:hover::after{
     margin: 0 auto;
     padding: 10rem;
     background-image: url("/assets/img/fundohome.jpg");
-    background-size: contain;
+    background-size: cover;
     background-position: center;
+    background-repeat: no-repeat;
 }
 
 section .conteudor{
     background-color: whitesmoke;
+    align-items: center;
+    justify-content: center;
+    
 }
 
 .conteudo p{
@@ -162,7 +172,7 @@ section .conteudor{
     margin: 0 auto;
     padding: 1rem 4rem;
     z-index: 10;
-    background-image: url("/assets/img/fire21.gif");
+    background-image: url("/assets/img/jogo4.jpg");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -171,9 +181,9 @@ section .conteudor{
 
 .jogofinal{
     display: grid;
-    grid-template-columns: 240px 3fr;
+    grid-template-columns: 200px 3fr 200px;
     width: 100vw;
-    max-height: 95vh;
+    max-height: 100vh;
     align-items: center;
     justify-content: center;
 }
@@ -196,9 +206,10 @@ section .conteudor{
     display: flex;
     flex-flow: column wrap;
     align-items: center;
-    padding: 0.5rem;
-    margin-top: 5rem;
+    padding: 0;
+    margin-top: -15rem;
     transition: all 500ms ease-in-out;  
+    height: 50vh;
 }
 
 .colunaesq p{
@@ -283,11 +294,12 @@ legend{
 
 .colunadir{
     display: grid;
-    height: 90vh;
+    height: 75vh;
     grid-template-rows: 1fr 1fr 1fr;
     text-align:center;
     align-items: center;
     justify-content: center; 
+    margin-top: -10rem;
 }
 
 .colunadir h6{
