--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -607,6 +607,56 @@ footer p:hover{
         font-size: 1.6rem;
     }
 
+    .conteudo1{
+        margin: 0 auto;
+        padding: 1rem 3rem;
+    }
+    
+    .jogofinal{
+        grid-template-columns: 180px 3fr 180px;
+        width: 80vw;
+        max-height: 90vh;
+    }
+    
+    .jogofinal p{
+        font-size: 1.8rem;
+    }
+    
+    .jogofinal img{
+        width: 30px;
+        height: 30px;
+        padding: 0.1rem 0;
+    }
+    
+    .colunaesq{
+        padding: 0;
+        margin-top: -5rem;
+        height: 40vh;
+    }  
+    
+    .crono{
+        bottom: 2.5rem;
+        left: 2rem;
+    }
+
+    .versus{
+        font-size: 4rem;
+        font-weight:800;
+        margin: 0 auto;
+    }
+    
+    .versus img{
+        width: 30rem;
+        height: 20rem;
+    }
+
+    .verdade img{
+        width: 1rem;
+        height: 1rem;
+    }
+    
+   
+    
 
 
 
