--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -349,7 +349,16 @@ legend{
     transition: all 500ms ease-in-out;
 }
 .jogo button:hover{
-    background-color: blueviolet;    
+    background-color: blueviolet;   
+    color: whitesmoke; 
+    font-weight: 900;
+}
+
+.jogo .level2{
+    background-image: url('/assets/img/flamefire.gif');
+    background-size: cover;
+    background-position: center;
+    color: yellow;
 }
 
 .colunadir{
@@ -399,7 +408,8 @@ legend{
 }
 
 .colunadir .jogo button{
-    font-size: 3rem;
+    font-size: 4rem;
+    font-weight: 600;
     width: 8rem;
     height: 8rem;
     margin: 2rem;
