--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -167,8 +167,23 @@ ul li a:hover::after{
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    font-weight: 5400;
+    font-weight:300;
 }
+
+.home{
+    display: flex;
+    flex-flow: column wrap;
+    justify-content: center;
+    align-items: center;
+    position: relative;
+}
+
+.conteudo img{
+    display: flex;
+    height: 100rem;
+    width: 100rem;
+}
+
 
 section .conteudor{
     background-color: whitesmoke;
