--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -176,6 +176,7 @@ ul li a:hover::after{
     justify-content: center;
     align-items: center;
     position: relative;
+    margin-top: 5rem;
 }
 
 .conteudo img{
