--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -17,7 +17,7 @@ body{
 .intro{
     display: flex;
     flex-flow: row wrap;
-    justify-content: space-evenly;
+    justify-content: space-around;
     align-items: center;
     padding: 0.8rem 3rem;
     margin: 0 auto;
@@ -177,7 +177,8 @@ ul li a:hover::after{
     justify-content: center;
     align-items: center;
     position: relative;
-    margin-top: 5rem;
+    margin-top: 10rem;
+    padding: 5rem;
 }
 
 .conteudo img{
@@ -637,6 +638,10 @@ footer p:hover{
 }
 
 @media (max-width: 1366px){
+
+    .home{
+        margin-top: 5rem;
+    }
 
     .abri{
         background-color: transparent;
