--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -35,6 +35,10 @@ body{
     border-radius: 1rem;
 }
 
+.close{
+    display: none;
+}
+
 aside{
     background-color: rgb(121, 23, 121);
     background-image: url("/assets/img/barra1.jpg");
@@ -864,5 +868,176 @@ footer p:hover{
         width: 70px;
         height: 70px; 
     }
+}
 
+@media(max-width:720px) {
+
+    .close{
+        position: fixed;
+        z-index: 10;
+        top: 0;
+        left: 0;  
+    }
+
+    .closelabel::after{
+        content: "≡";
+        position: fixed;
+        z-index: 20;
+        top: 1.5rem;
+        right: 1.5rem;
+        background-color: rgb(41, 11, 58);
+        color: white;
+        font-size: 3.2rem;
+        line-height: 2.1rem;
+        height: 2.2rem;
+        width: 2rem;
+        text-align: center;
+        padding: 0.2rem;
+        cursor: pointer;
+    }
+
+    .close:checked~aside{
+        display: block;
+        width: 92vw;
+        height: 400px;
+        background-color: whitesmoke;
+        border: solid 0.3rem rgb(41, 11, 58);  
+        z-index: 5;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .close:checked~aside .intro{
+        width: 90vw;
+        height: 352px;
+    }
+
+    .close:checked~aside .intro, .close:checked~aside .intro li a, .close:checked~aside h1 {
+        background-color: whitesmoke;
+        color: rgb(41, 11, 58);
+        background-image: none;
+    }
+
+    .close:checked~.closelabel::after{
+        content: '×';
+    }
+
+    aside{
+        display: none;
+        bottom: 1.5rem;
+        top: 1.5rem;
+        left: 0.5rem; 
+        margin: 0 auto;
+        right: 0.5rem; 
+        align-items: center;
+        justify-content: center;   
+        max-width: 95vw; 
+        max-height: 90vh;
+        background-image: none;
+    }
+
+    .intro, .intro ul{
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .intro{
+        gap: 4rem;
+    }
+
+    .resultado{
+        font-size: 1.2rem;
+        height: 100vh;
+        overflow: hidden;  
+    }
+
+    .home{
+        margin-top: -10rem;
+        padding: 1rem;
+        max-width: 100vw;
+    }
+    
+    .conteudo .dadoroxo{
+        position: fixed;
+        width: 15rem;
+        height: 15rem;
+        bottom: 10rem;
+    }
+    
+    .conteudo p{
+        font-size: 2.1rem;
+        width: 85vw;
+    }
+
+    .regra{
+        counter-reset: x;
+        display: grid;
+        grid-template-columns: 20px 1fr;
+        justify-content: center;
+        align-items: center;
+    }
+    
+    .regra img{
+        position: fixed;
+        left: 40%;
+        top: 0;
+        height: 80px;
+        width: 80px;
+    }
+    
+    
+    h2{
+        font-size: 2rem;
+    }
+    
+    .regra p{
+        font-size: 1.4rem;
+        padding: 0.3rem 0;
+        font-weight: 600;
+        color: rgb(41, 11, 58);
+    }
+    
+    .regra p::before{
+        font-size: 2.5rem;
+    }
+
+    .reg{
+        max-height: 90vh;
+    }
+
+    .play{
+        margin-left: 0rem;   
+    }
+
+    .play h1{
+        font-size: 2rem;
+    }
+    
+    .play p{
+        font-weight: 500;
+        margin-top: 1rem;
+        font-size: 1.6rem;
+    }
+    
+    .play ol{
+        grid-template-columns: 1fr 1fr;
+        gap: 1rem 2rem;
+        margin-top: 2rem;
+        margin-left: 3rem;
+    }
+    
+    .play ol li{
+        font-size: 1.2rem;
+        font-weight: 500;
+        text-shadow: 2px; 
+    }
+    
+    .play ol li a{
+        font-weight: 500;
+    }    
+    
+    
+
+    
 }
