--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -168,11 +168,14 @@ ul li a:hover::after{
     align-items: center;
     margin: 0 auto;
     padding: 10rem;
+    font-weight:300;
+}
+
+.conteudo:not(.img2){
     background-image: url("/assets/img/fundohome.jpg");
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
-    font-weight:300;
 }
 
 .home{
@@ -503,6 +506,13 @@ h2{
     color: rgb(41, 11, 58);
 }
 
+.clavemenor{
+    width: 300px;
+    height: 300px;
+    position: fixed;
+    right: 1rem;
+}
+
 .play{
     display: flex;
     flex-direction: column;
@@ -570,11 +580,7 @@ h2{
 }
 
 .img2{
-    background-image: url("/assets/img/clave3.png");
     background-color: whitesmoke;
-    background-position:right;
-    background-size: 30%;  
-    background-repeat: no-repeat;
 }
 
 .versus{
@@ -981,63 +987,254 @@ footer p:hover{
     .regra img{
         position: fixed;
         left: 40%;
-        top: 0;
+        top: 1rem;
         height: 80px;
         width: 80px;
     }
     
     
     h2{
+        margin-top: 4rem;
         font-size: 2rem;
     }
     
     .regra p{
-        font-size: 1.4rem;
-        padding: 0.3rem 0;
+        font-size: 1.5rem;
+        margin-top: 1rem;
+        padding: 0.4rem 0;
         font-weight: 600;
         color: rgb(41, 11, 58);
     }
     
     .regra p::before{
-        font-size: 2.5rem;
+        font-size: 2.2rem;
     }
 
     .reg{
         max-height: 90vh;
     }
+    
+    .clavemenor{
+        width: 180px;
+        height: 180px;
+        position: fixed;
+        right: 0rem;
+    }
 
     .play{
         margin-left: 0rem;   
+        margin-top: 0rem;
     }
 
     .play h1{
-        font-size: 2rem;
+        font-size: 1.6rem;
     }
     
     .play p{
         font-weight: 500;
         margin-top: 1rem;
-        font-size: 1.6rem;
+        font-size: 1.4rem;
     }
     
     .play ol{
-        grid-template-columns: 1fr 1fr;
-        gap: 1rem 2rem;
-        margin-top: 2rem;
-        margin-left: 3rem;
+        grid-template-columns: 1fr;
+        gap: 0.7rem  0;
+        margin-top: 1rem;
+        margin-left: 0rem;
     }
     
     .play ol li{
-        font-size: 1.2rem;
+        font-size: 1.4rem;
         font-weight: 500;
         text-shadow: 2px; 
     }
     
     .play ol li a{
         font-weight: 500;
-    }    
+    }  
+
+    .conteudo1{
+        padding: 0rem 0rem;
+    }
     
+    .jogofinal{
+        display: flex;
+        flex-direction: column;
+        max-width: 90vw;
+    }
+    
+    .jogofinal p{
+        font-size: 1.4rem;
+    }
+    
+    .jogofinal img{
+        width: 35px;
+        height: 35px;
+        padding: 0.1rem 0;
+    }
+    
+    .colunaesq1{
+        display: flex;
+        flex-direction: row;
+        height: auto;
+        width: 90vw;
+        position: fixed;
+        top: 20rem;
+        left: 3rem;
+    }
+    
+    .colunaesq{
+        display: none;
+        flex-flow: row wrap;
+        align-items: center;
+        justify-content: center;
+        padding: 0;
+        transition: all 500ms ease-in-out;  
+        height: auto;
+        width: 90vw;
+    }
+    
+    .abri{
+        background-color: rgba(128, 0, 128, 0.651);
+        width: auto;
+        font-weight: 500;
+        font-size: 1.3rem;
+        padding: 0.4rem;
+        border-radius: 0.5rem;
+        transition: all 400ms ease-in-out;
+        cursor: pointer;
+    }
     
 
     
+    
+    
+    .abri:checked~#abrir{
+        display: flex;
+    }
+    
+    .crono{
+        bottom: 2.5rem;
+        left: 3rem;
+    }
+    
+    .colunadir{
+        display: grid;
+        height: 75vh;
+        width: 45vw;
+        grid-template-rows: 1fr 1fr 1fr;
+        margin-top: -20rem;
+    }
+
+    .colunadir h6{
+        color: yellow;
+        font-size: 2.4rem;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    .colunadir h3{
+        font-size: 2.2rem;
+    }
+    
+    .colunadir h5{
+        font-size: 2.2rem;
+    }
+    
+    
+    .colunadir .jogo{
+        font-size: 2rem;
+        padding: 3rem;
+    }
+    
+    .colunadir .jogo button{
+        font-size: 3rem;
+        font-weight: 600;
+        width: 6rem;
+        height: 6rem;
+        margin: 2rem;
+    }
+    
+    .resultadojogo{
+        font-size: 5rem;
+        color: whitesmoke;
+    }
+    
+    .colunadir .versus img{
+        width: 60px;
+        height: 60px; 
+    }
+    
+}
+
+@media (max-width: 380px) {
+
+    .clavemenor{
+        width: 150px;
+        height: 150px;
+    }
+
+    .play{
+        margin-left: 0rem;   
+        margin-top: 0rem;
+    }
+
+    .play h1{
+        font-size: 1.5rem;
+    }
+    
+    .play p{
+        margin-top: 0rem;
+        font-size: 1.2rem;
+    }
+    
+    .play ol{
+        grid-template-columns: 1fr;
+        gap: 0.5rem  0;
+        margin-top: 0rem;
+    }
+    
+    .play ol li{
+        font-size: 1.2rem; 
+    }
+
+    .home{
+        margin-top: -2rem;
+        padding: 1rem;
+    }
+    
+    .conteudo .dadoroxo{
+        bottom: 2rem;
+    }
+    
+    .conteudo p{
+        font-size: 2rem;
+    }
+    
+    .regra img{
+        position: fixed;
+        left: 40%;
+        top: 0;
+        height: 80px;
+        width: 80px;
+    }
+    
+    h2{
+        font-size: 1.6rem;
+        margin-top: 1rem;
+    }
+    
+    .regra p{
+        margin-top: -1rem;
+        font-size: 1.3rem;
+        padding: 0.3rem 0;
+    }
+    
+    .regra p::before{
+        font-size: 2rem;
+    }
+
+    
+
 }
