--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -911,6 +911,8 @@ footer p:hover{
         z-index: 5;
         justify-content: center;
         align-items: center;
+        border-bottom-left-radius: 1rem;
+        border-bottom-right-radius: 1rem;
     }
 
     .close:checked~aside .intro{
@@ -1075,38 +1077,39 @@ footer p:hover{
     
     .colunaesq1{
         display: flex;
-        flex-direction: row;
+        flex-direction: column;
         height: auto;
-        width: 90vw;
+        width: 100vw;
         position: fixed;
-        top: 20rem;
-        left: 3rem;
+        top: 18.5rem;
+        left: 0;
+        z-index: 10;
     }
     
     .colunaesq{
         display: none;
-        flex-flow: row wrap;
+        flex-flow: column wrap;
         align-items: center;
         justify-content: center;
-        padding: 0;
+        padding: 2rem;
         transition: all 500ms ease-in-out;  
         height: auto;
-        width: 90vw;
+        width: 50vw;
+        background-color: rgb(63, 0, 63);
+        border-radius: 2rem;
+        border: solid 0.5rem rgb(97, 1, 97);
     }
     
     .abri{
-        background-color: rgba(128, 0, 128, 0.651);
+        
         width: auto;
         font-weight: 500;
-        font-size: 1.3rem;
-        padding: 0.4rem;
+        font-size: 1.2rem;
+        padding: 0.1rem;
         border-radius: 0.5rem;
         transition: all 400ms ease-in-out;
         cursor: pointer;
     }
-    
-
-    
     
     
     .abri:checked~#abrir{
@@ -1123,7 +1126,7 @@ footer p:hover{
         height: 75vh;
         width: 45vw;
         grid-template-rows: 1fr 1fr 1fr;
-        margin-top: -20rem;
+        margin-top: -16rem;
     }
 
     .colunadir h6{
@@ -1186,7 +1189,10 @@ footer p:hover{
     
     .play p{
         margin-top: 0rem;
-        font-size: 1.2rem;
+    }
+
+    #playlist p{
+        font-size: 1.5rem;
     }
     
     .play ol{
