--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1241,6 +1241,38 @@ footer p:hover{
         font-size: 2rem;
     }
 
-    
+}
 
+
+
+.imagemfinal{
+    position: fixed;
+    margin: 0 auto;
+    left: 0;
+    right: 0;
+    min-width: 320px;
+    min-height: 320px;
+    z-index: 100; 
+    border-radius: 2rem; 
+    transition: all 800ms ease-in-out;
+}
+
+.botaozim{
+    border-radius: 50%;
+    width: 50px;
+    height: 50px;
+    position: fixed;
+    left: 0;
+    right: 0;
+    bottom: 200px;
+    margin: 0 auto;
+    background-color: blueviolet;
+    z-index: 101;
+    background-image: url('/assets/img/setaazul.png');
+    background-size: cover;
+    background-position: center;
+}
+
+.imagemfinal:hover{
+    transform: scale(1.2);
 }
