--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -216,7 +216,7 @@ section .conteudor{
     margin: 0 auto;
     padding: 1rem 4rem;
     z-index: 10;
-    background-image: url("/assets/img/jogo4.jpg");
+    background-image: url("/assets/img/fundoteste2.png");
     background-size: cover;
     background-position: center center;
     background-repeat: no-repeat;
@@ -518,7 +518,7 @@ h2{
     flex-direction: column;
     justify-content: center;
     align-items:center;
-    margin-left: -10rem;   
+    margin-left: -8rem;   
 }
 
 .play p{
